fixing menu overlap issue

--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,7 @@ nav {
 
 /*menu in mobile*/
 .mobile-menu {
+    background-color: var(--white);
     position: absolute;
     top: 60px;
     padding: 24px;
@@ -154,6 +155,7 @@ nav {
 
 /* aside shopping & product detail*/
 .product-detail {
+    background-color: var(--white);
     width: 360px;
     padding: 24px;
     box-sizing: border-box;
